tests/compilefail09.out
[1mtests/compilefail09.pas:3:38: [0m[1m[91merror:[0m Parameter Redefined: a
     3 | function oops(a:integer; b: boolean; a:real):integer;